force-app/main/default/objects/Package__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Uncheck to retire old/seasonal packages without deleting them</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>