force-app/main/default/objects/Package__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What&apos;s included: hotel category, meals, transfers</description>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>