force-app/main/default/objects/Package__c/validationRules/Package_Valid_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Valid_Values</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Base_Price__c &lt;= 0, Duration_Days__c &lt;= 0)</errorConditionFormula>
    <errorMessage>Base Price and Duration must be greater than 0.</errorMessage>
</ValidationRule>